LPS-116804 Fix spacing for Fieldset inside a data-engine > form-builder

--- a/modules/apps/data-engine/data-engine-taglib/src/main/resources/META-INF/resources/data_layout_builder/css/components/_ddm_form_builder.scss
+++ b/modules/apps/data-engine/data-engine-taglib/src/main/resources/META-INF/resources/data_layout_builder/css/components/_ddm_form_builder.scss
@@ -18,10 +18,15 @@ $baseline: 24px;
 			padding: 0 1px;
 		}
 
-		.ddm-fieldset .col-ddm {
-			padding: 0 16px;
-		}
+		.ddm-field-types-fieldset__nested {
+			margin: 0;
+			padding: 0;
 
+			&__nested-separator,
+			.text-uppercase {
+				padding: 0;
+			}
+		}
 		.ddm-field-container {
 			background-color: #fff;
 
